<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scannerStateLabel"
            android:text="@string/scanner_connection_state_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scannerStateOutput"
            android:text="@string/scanner_state_unknown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lastContactLabel"
            android:text="@string/lastcontact_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scannerStateLabel" />

        <TextView
            android:id="@+id/lastContactOutput"
            android:layout_width="160dp"
            android:layout_height="18dp"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/lastContactLabel"
            app:layout_constraintTop_toTopOf="@+id/lastContactLabel" />

        <TextView
            android:id="@+id/lastSymbologyLabel"
            android:text="@string/symbology_label"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@+id/lastContactLabel"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lastSymbologyOutput"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lastSymbologyLabel"
            app:layout_constraintBottom_toBottomOf="@+id/lastSymbologyLabel" />

        <TextView
            android:id="@+id/barcodeContentLabel"
            android:text="@string/barcode_content"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastSymbologyLabel" />

        <TextView
            android:id="@+id/intentInputField"
            android:text="@string/barcode_output_default"
            android:textSize="36sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_weight="1"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barcodeContentLabel"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/getScannerStateBtn"
            android:text="@string/get_scanner_state"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intentInputField" />

        <include
            layout="@layout/feedback_selection_layout"
            android:id="@+id/feedBackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getScannerStateBtn" />

        <Switch
            android:id="@+id/defaultFeedbackSwitch"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:checked="true"
            android:text="@string/use_default_scan_feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedBackLayout" />

        <Switch
            android:id="@+id/sendFeedbackWithReplaceQueueSwitch"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:checked="false"
            android:text="@string/send_with_replace_queue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defaultFeedbackSwitch" />

        <include
            layout="@layout/profiles_layout"
            android:id="@+id/profilesLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendFeedbackWithReplaceQueueSwitch" />

        <TextView
            android:id="@+id/blockTriggerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/block_trigger_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilesLayout" />

        <Button
            android:id="@+id/blockTriggerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/trigger_block"
            app:layout_constraintTop_toBottomOf="@+id/blockTriggerLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/unblockTriggerButton"/>

        <Button
            android:id="@+id/unblockTriggerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/trigger_unblock"
            app:layout_constraintTop_toBottomOf="@+id/blockTriggerLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/blockTriggerButton"/>

        <TextView
            android:id="@+id/lastResponseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_response_status"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blockTriggerButton" />

        <TextView
            android:id="@+id/lastResponseValue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lastResponseLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lastResponseLabel" />

        <TextView
            android:id="@+id/displayStateLabel"
            android:text="@string/display_connection_state_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastResponseLabel" />

        <TextView
            android:id="@+id/displayStateOutput"
            android:text="@string/display_state_unknown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="@+id/displayStateLabel"
            app:layout_constraintTop_toTopOf="@+id/displayStateLabel"
            app:layout_constraintBottom_toBottomOf="@+id/displayStateLabel" />

        <Button
            android:id="@+id/disconnectDisplayBtn"
            android:text="@string/disconnect_display"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@+id/displayStateLabel" />

        <Button
            android:id="@+id/getDisplayState"
            android:text="@string/get_display_state"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disconnectDisplayBtn" />

        <Button
            android:id="@+id/sendTestScreenBtn"
            android:text="@string/send_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getDisplayState" />

        <Button
            android:id="@+id/sendPartialRefreshTestScreenBtn"
            android:text="@string/send_partial_refresh_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendTestScreenBtn" />

        <Button
            android:id="@+id/sendNotificationTestScreenBtn"
            android:text="@string/send_notification_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendPartialRefreshTestScreenBtn" />

        <Button
            android:id="@+id/sendPg1TestScreenBtn"
            android:text="@string/send_pg1_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendNotificationTestScreenBtn" />

        <Button
            android:id="@+id/sendPg1ATestScreenBtn"
            android:text="@string/send_pg1a_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendPg1TestScreenBtn" />

        <Button
            android:id="@+id/sendTestScreenBtnFailing"
            android:text="@string/send_screen_failing"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendPg1ATestScreenBtn" />

        <Button
            android:id="@+id/pickDisplayOrientationDialogBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:text="@string/pick_display_orientation"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendTestScreenBtnFailing" />

        <Button
            android:id="@+id/deviceVisibilityBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:text="@string/showDeviceVisibilityInfo"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickDisplayOrientationDialogBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>